--- a/symfony_fw/public/css/system/basic.css
+++ b/symfony_fw/public/css/system/basic.css
@@ -13,129 +13,6 @@
 
 .clearfix::after { content: ""; clear: both; }
 
-/*.button { -webkit-transform: scale(1) rotate(360deg); transform: scale(1) rotate(360deg); -webkit-transition: -webkit-transform 150ms cubic-bezier(.4, 0, 1, 1); transition: transform 150ms cubic-bezier(.4, 0, 1, 1);
-}
-.button:hover { -webkit-transition: box-shadow 150ms cubic-bezier(0, 0, .2, 1); transition: box-shadow 150ms cubic-bezier(0, 0, .2, 1);
-}
-.second-icon, .first-icon { left: 0; margin-left: 16px; margin-top: 16px; position: absolute; top: 0;  -webkit-transition: all .2s cubic-bezier(.4, 0, .2, 1); transition: all .2s cubic-bezier(.4, 0, .2, 1);
-}
-.second-icon, .button:hover .first-icon { opacity: 0;  -webkit-transform: rotate(225deg); transform: rotate(225deg);
-}
-.button:hover .second-icon { opacity: 1; visibility: visible;  -webkit-transform: rotate(360deg); transform: rotate(360deg);
-}*/
-/*html { position: relative; min-height: 100%;
-}
-
-body { margin: 0px auto; overflow-x: hidden; z-index: 1;
-}
-
-fieldset { border: 1px solid #dddddd !important; padding: 0 20px !important; argin-bottom: 10px !important;
-}
-
-legend { width: inherit; padding: 0 10px; border-bottom: none;
-}
-
-.cursor_pointer { cursor: pointer;
-}
-
-.line_through { text-decoration: line-through;
-}
-
-.word_break { -ms-word-break: break-all; word-break: break-all;  -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto;
-}
-
-.position_relative { position: relative;
-}
-.position_absolute { position: absolute;
-}
-
-.float_right { float: right;
-}
-
-.clearfix::after { content: ""; clear: both;
-}
-
-.visibility_hidden { visibility: hidden;
-}
-
-.display_none { display: none;
-}
-.display_block { display: block;
-}
-.display_inline { display: inline;
-}
-.display_inline_block { display: inline-block;
-}
-
-.margin_top { margin-top: 20px;
-}
-.margin_bottom { margin-bottom: 20px;
-}
-.margin_left { margin-left: 20px;
-}
-.margin_right { margin-right: 20px;
-}
-.margin_panel { margin: 10px;
-}
-.margin_clear { margin: 0;
-}
-.margin_clear_top { margin-top: 0;
-}
-.margin_clear_bottom { margin-bottom: 0;
-}
-.margin_clear_left { margin-left: 0;
-}
-.margin_clear_right { margin-left: 0;
-}
-.margin_auto { margin: auto;
-}
-
-.padding_clear { padding: 0;
-}
-
-.vertical_top { vertical-align: top;
-}
-.vertical_middle { vertical-align: middle;
-}
-.horizontal_left { text-align: left;
-}
-.horizontal_center { text-align: center;
-}
-.horizontal_right { text-align: right;
-}
-
-.overflow_hidden { overflow: hidden;
-}
-.overflow_y_hidden { overflow-x: auto; overflow-y: hidden;
-}
-.overflow_y_auto { overflow-x: auto; overflow-y: auto;
-}
-
-.sortable_column_enabled { border: 1px solid red; margin: 10px; padding: 1px 1px 10px 1px;
-}
-.sortable_placeholder { border: 1px dotted black; margin-bottom: 20px;
-}
-
-.ui-sortable-handle { cursor: move;
-}
-
-.module_settings { display: none; position: absolute; top: -15px; left: -15px; background-color: #ffffff; border: 1px solid; padding: 3px; z-index: 1004;
-}
-
-.progressBar { margin-bottom: 0px !important;  .progress-bar { span { margin-left: 5px; color: #000000; } }
-}
-
-.rotate_45 { -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg);
-}
-.rotate_135 { -webkit-transform: rotate(135deg); -moz-transform: rotate(135deg); -ms-transform: rotate(135deg); -o-transform: rotate(135deg); transform: rotate(135deg);
-}
-.rotate_225 { -webkit-transform: rotate(225deg); -moz-transform: rotate(225deg); -ms-transform: rotate(225deg); -o-transform: rotate(225deg); transform: rotate(225deg);
-}
-.rotate_315 { -webkit-transform: rotate(315deg); -moz-transform: rotate(315deg); -ms-transform: rotate(315deg); -o-transform: rotate(315deg); transform: rotate(315deg);
-}
-
-.ui-resizable-e { width: 15px;
-}*/
 /*$spaceBottom: 120px;
 $textColor: #4089c9;
 
@@ -355,7 +232,7 @@ p { margin: 0;
 #page_menu_sort, #module_position_sort { position: relative;  div { position: absolute; top: -105px; left: 50%; width: 50px; }
 }*/
 @media (max-width: 839px) { .main .sortable_column { padding-top: 55px !important; }
-  .main .sortable_column .page_container form .mdc-text-field, .main .sortable_column .page_container form .mdc-select { width: 100% !important; }
+  .main .sortable_column form .mdc-text-field, .main .sortable_column form .mdc-select { width: 100% !important; }
   .sort_container .sort_list i { cursor: pointer !important; }
   .sort_container .sort_control { display: block !important; } }
 @media (max-width: 599px) { .main .sortable_column { padding-top: 45px !important; } }
@@ -402,16 +279,15 @@ table tbody tr td { text-align: center; border-bottom: 1px solid #dee2e6; paddin
 .logo_main { width: 45px; margin-top: 8px; }
 
 .main .sortable_column { padding-top: 120px; padding-bottom: 80px; }
-.main .sortable_column .page_container form .mdc-text-field, .main .sortable_column .page_container form .mdc-select { width: 50%; }
-.main .sortable_column .page_container form .mdc-select { margin-bottom: 10px; }
-.main .sortable_column .page_footer { width: 100%; }
+.main .sortable_column form .mdc-text-field, .main .sortable_column form .mdc-select { width: 50%; }
+.main .sortable_column form .mdc-select { margin-bottom: 10px; }
+.main .page_footer { width: 100%; }
 
 .footer { display: flex; justify-content: center; flex-direction: column; text-align: center; position: absolute; bottom: 0; width: 100%; height: 80px; }
 .footer .icon div { display: inline-block; margin: 5px 10px; }
 .footer .text p { margin: 0; font-size: 12px; }
 
 .module, .module_clean { padding: 5px; overflow: hidden; }
-.module .settings, .module_clean .settings { display: none; }
 .module .drag, .module_clean .drag { cursor: move; }
 .module .title i, .module .title h1, .module_clean .title i, .module_clean .title h1 { display: inline-block; vertical-align: middle; margin: 0; }
 .module .mdc-card__actions, .module_clean .mdc-card__actions { min-height: auto !important; padding: 0; }
@@ -441,9 +317,15 @@ table tbody tr td { text-align: center; border-bottom: 1px solid #dee2e6; paddin
 
 .wordTag_container .mdc-chip { margin: 5px; }
 
+.user_login { max-width: 300px; }
+
 .cp_section_button { margin-bottom: 10px; }
 
+.menu_control_panel { width: 100%; }
+.menu_control_panel .material-icons { margin-right: 5px; }
+
 #panel_id_1 p { margin: 0; }
+#panel_id_1 .mdc-text-field { width: 100%; }
 #panel_id_1 .submit_container button { margin-top: 0; width: 100%; }
 #panel_id_1 .link_container { margin-top: 5px; text-align: center; }
 #panel_id_1 .link_container a { display: block; text-decoration: none !important; }
@@ -451,11 +333,13 @@ table tbody tr td { text-align: center; border-bottom: 1px solid #dee2e6; paddin
 
 #language_text_container .mdc-list-item span img { display: inline-block; vertical-align: middle; margin-right: 10px; }
 
-#pageComment_result .mdc-list-item__meta { cursor: pointer; }
-
 #form_pageComment .mdc-text-field--textarea { width: 100%; }
 #form_pageComment .mdc-text-field--textarea .mdc-text-field__input { resize: none; }
 
-#cp_module_drag_switch { margin-bottom: 10px; }
+#pageComment_result .mdc-list-item { height: auto; padding: 10px; }
+#pageComment_result .mdc-list-item .quote_text { display: block; background: #ededed; padding: 10px; border-radius: 20px; white-space: initial !important; }
+#pageComment_result .mdc-list-item .quote_text .quote_avatar { width: 40px; height: 40px; display: inline-block; vertical-align: middle; margin-right: 5px; border-radius: 50%; }
+#pageComment_result .mdc-list-item .argument { padding: 10px 10px 0 10px; }
+#pageComment_result .mdc-list-item .mdc-list-item__meta { cursor: pointer; z-index: 1; }
 
 /*# sourceMappingURL=basic.css.map */
