--- a/symfony_fw/templates/layout/layout_site.html.twig
+++ b/symfony_fw/templates/layout/layout_site.html.twig
@@ -1,18 +1,47 @@
-{% if (settingRow['template_column'] == 1) %}
+{% if (settingRow['template_column'] == 1 and app.request.attributes.get("_route") != "control_panel") %}
     {% set templateColumnCenter = "8" %}
-{% elseif (settingRow['template_column'] == 2 or settingRow['template_column'] == 3) %}
+{% elseif (settingRow['template_column'] == 2 or settingRow['template_column'] == 3 or app.request.attributes.get("_route") == "control_panel") %}
     {% set templateColumnCenter = "10" %}
-{% elseif (settingRow['template_column'] == 4) %}
+{% elseif (settingRow['template_column'] == 4 and app.request.attributes.get("_route") != "control_panel") %}
     {% set templateColumnCenter = "12" %}
 {% endif %}
+
 <!DOCTYPE html>
 <html lang="{{app.request.getLocale()}}">
     <head>
-        {% block headMeta %}{% endblock %}
-        {% block headLink %}{% endblock %}
+        <title>{{websiteName}}</title>
+
+        <!-- Meta -->
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <!--<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
+        
+        {{-include("@templateRoot/layout/layout_google.html.twig")-}}
+
+        <!-- Favicon -->
+        <link href="{{asset("images/templates/" ~ settingRow['template'] ~ "/favicon.ico")}}" rel="icon" type="image/x-icon">
+
+        <!-- Css -->
+        <link href="{{asset("css/library/jquery-ui_1.12.1.min.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/library/jquery-ui_1.12.1_structure.min.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/library/Roboto+Mono.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/library/Roboto_300_400_500.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/library/material-icons.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/library/material-components-web.min.css")}}" rel="stylesheet"/>
+
+        <link href="{{asset("css/system/" ~ settingRow['template'] ~ ".css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/system/loader.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/system/captcha.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/system/table_and_pagination.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/system/upload.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/system/wysiwyg.css")}}" rel="stylesheet"/>
+        <link href="{{asset("css/system/widget.css")}}" rel="stylesheet"/>
     </head>
     <body class="mdc-typography user_select_none">
+        
         {% block headerContainer %}{% endblock %}
+        
         <div class="mdc-layout-grid main">
             <div class="mdc-layout-grid__inner">
                 {% if (settingRow['template_column'] == 1 or settingRow['template_column'] == 2) %}
@@ -23,15 +52,135 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-{{templateColumnCenter}} mdc-layout-grid__cell--span-{{templateColumnCenter}}-tablet column_center_container">
                     {% block columnCenterContainer %}{% endblock %}
                 </div>
-                {% if (settingRow['template_column'] == 1 or settingRow['template_column'] == 3) %}
+                {% if ((settingRow['template_column'] == 1 or settingRow['template_column'] == 3) and app.request.attributes.get("_route") != "control_panel") %}
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2 mdc-layout-grid__cell--span-2-tablet column_right_container display_desktop">
                         {% block columnRightContainer %}{% endblock %}
                     </div>
                 {% endif %}
             </div>
         </div>
+        
         {% block footerContainer %}{% endblock %}
-        {% block bodyIncludeDown %}{% endblock %}
-        {% block javascript %}{% endblock %}
+        
+        {{-include("@templateRoot/include/loader.html.twig")-}}
+        {{-include("@templateRoot/include/flash_bag.html.twig")-}}
+        {{-include("@templateRoot/include/popup_easy.html.twig")-}}
+        
+        <script type="text/javascript">
+            var session = {
+                'token': "{{csrf_token("intention")}}",
+                'userActivity': "{{php_session.userActivity}}",
+                'languageTextCode': "{{php_session.languageTextCode}}",
+                'currentPageId': "{{php_session.currentPageId}}"
+            };
+
+            var path = {
+                'documentRoot': "{{response.path.documentRoot}}",
+                'root': "{{response.path.root}}",
+                'src': "{{response.path.src}}",
+                'web': "{{response.path.web}}"
+            };
+
+            var url = {
+                'root': "{{response.url.root}}",
+                'rootRender': "{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'languageText': "{{path("language_text", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'languagePage': "{{path("language_page", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'searchModule': "{{path("search_module", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'searchRender': "{{path("search_render", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'registration': "{{path("registration", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'recoverPassword': "{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'authentication': "{{path("authentication", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'authenticationEnterCheck': "{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'authenticationExitCheck': "{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'myPageProfilePassword': "{{path("myPage_profile_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'myPageProfileCredit': "{{path("myPage_profile_credit", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'myPageProfileCreditPayPal': "{{path("myPage_profile_credit_payPal", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'myPageProfileUpload': "{{path("myPage_profile_upload", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'myPagePaymentSelection': "{{path("myPage_payment_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'myPagePaymentProfileResult': "{{path("myPage_payment_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'myPagePaymentDeletion': "{{path("myPage_payment_deletion", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'pageCommentRender': "{{path("pageComment_render", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'pageCommentSave': "{{path("pageComment_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}",
+                'controlPanel': "{{path("control_panel", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': ""})}}",
+                'cpPaymentUserSelection': "{{path("cp_payment_user_selection", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpPaymentSelection': "{{path("cp_payment_selection", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpPaymentProfileResult': "{{path("cp_payment_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpPaymentDeletion': "{{path("cp_payment_deletion", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpPageCreation': "{{path("cp_page_creation", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpPageSelection': "{{path("cp_page_selection", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpPageProfileResult': "{{path("cp_page_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpPageProfileSort': "{{path("cp_page_profile_sort", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpPageProfileSave': "{{path("cp_page_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpPageDeletion': "{{path("cp_page_deletion", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpUserCreation': "{{path("cp_user_creation", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpUserSelection': "{{path("cp_user_selection", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpUserProfileResult': "{{path("cp_user_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpUserProfileSave': "{{path("cp_user_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpUserDeletion': "{{path("cp_user_deletion", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpModuleCreation': "{{path("cp_module_creation", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpModuleSelection': "{{path("cp_module_selection", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpModuleProfileResult': "{{path("cp_module_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpModuleProfileSort': "{{path("cp_module_profile_sort", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpModuleProfileSave': "{{path("cp_module_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpModuleDeletion': "{{path("cp_module_deletion", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpRoleUserCreation': "{{path("cp_roleUser_creation", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpRoleUserSelection': "{{path("cp_roleUser_selection", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpRoleUserProfileResult': "{{path("cp_roleUser_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpRoleUserProfileSave': "{{path("cp_roleUser_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpRoleUserDeletion': "{{path("cp_roleUser_deletion", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpSettingSave': "{{path("cp_setting_save", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
+                'cpSettingLanguageManage': "{{path("cp_setting_language_manage", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}"
+            };
+
+            var setting = {
+                'widthMobile': 839,
+                'widthDesktop': 840,
+                'template': "{{settingRow['template']}}",
+                'language': "{{settingRow['language']}}",
+                'websiteActive': "{{settingRow['website_active']}}"
+            };
+
+            var text = {
+                'index_5': "{{"index_5"|trans}}",
+                'index_6': "{{"index_6"|trans}}",
+                'index_7': "{{"index_7"|trans}}",
+                'index_8': "{{"index_8"|trans}}",
+                'index_9': "{{"index_9"|trans}}",
+                'index_10': "{{"index_10"|trans}}"
+            };
+
+            var textWidgetDatePicker = {
+                'label_1': "{{"widgetDatePicker_1"|trans}}",
+                'label_2': "{{"widgetDatePicker_2"|trans}}",
+                'label_3': "{{"widgetDatePicker_3"|trans}}"
+            };
+        </script>
+        
+        <script type="text/javascript" src="{{asset("javascript/library/jquery_3.3.1.min.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/library/jquery-ui_1.12.1.min.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/library/jquery-mobile_1.5.0.min.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/library/material-components-web.min.js")}}"></script>
+
+        <script type="text/javascript" src="{{asset("javascript/system/Utility.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/Ajax.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/Search.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/Loader.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/FlashBag.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/TableAndPagination.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/Captcha.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/Upload.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/PopupEasy.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/Language.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/Wysiwyg.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/PageComment.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/MaterialDesign.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/WidgetSearch.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/WidgetDatePicker.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/Authentication.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/Registration.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/RecoverPassword.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/MenuUser.js")}}"></script>
+        <script type="text/javascript" src="{{asset("javascript/system/Index.js")}}"></script>
     </body>
 </html>
