--- a/symfony_fw/templates/render/control_panel/page_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/page_profile.html.twig
@@ -15,7 +15,7 @@
     <form id="form_cp_page_profile" action="{{path("cp_page_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
         {{form_row(form.language)}}
         {{form_row(form.alias, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
-        {{form_row(form.parent, {'dense': "", 'styleType': "outlinedTrailing"})}}
+        {{form_row(form.parent, {'dense': ""})}}
         {{form_row(form.title, {'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.controllerAction, {'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.argument, {'dense': "", 'styleType': "outlinedTrailing"})}}
@@ -28,8 +28,8 @@
             <div class="wordTag_result"></div>
         </div>
         
-        {{form_row(form.protected, {'dense': "", 'styleType': "outlinedTrailing"})}}
-        {{form_row(form.showInMenu, {'dense': "", 'styleType': "outlinedTrailing"})}}
+        {{form_row(form.protected, {'dense': ""})}}
+        {{form_row(form.showInMenu, {'dense': ""})}}
         {{form_row(form.menuName, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "menu"})}}
         
         <div id="page_rankMenuSort" class="sort_container">
@@ -50,8 +50,8 @@
             {{form_row(form.rankMenuSort)}}
         </div>
         
-        {{form_row(form.comment, {'dense': "", 'styleType': "outlinedTrailing"})}}
-        {{form_row(form.onlyLink, {'dense': "", 'styleType': "outlinedTrailing"})}}
+        {{form_row(form.comment, {'dense': ""})}}
+        {{form_row(form.onlyLink, {'dense': ""})}}
         {{form_row(form.link, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "link"})}}
 
         {{form_widget(form._token)}}
