--- a/symfony_fw/templates/render/control_panel/user_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/user_profile.html.twig
@@ -33,7 +33,7 @@
         {{form_row(form.address, {'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.password, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
         {{form_row(form.passwordConfirm, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
-        {{form_row(form.notLocked)}}
+        {{form_row(form.active)}}
         {{form_row(form.credit, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "monetization_on"})}}
         
         {{form_widget(form._token)}}
