--- a/symfony_fw/templates/render/module/menu_root.html.twig
+++ b/symfony_fw/templates/render/module/menu_root.html.twig
@@ -95,7 +95,7 @@
                     <img id="language_flag_mobile_{{app.request.getLocale()}}" class="language_text_flag display_inline" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/lang/" ~ app.request.getLocale() ~ ".png")}}" alt="{{app.request.getLocale()}}.png"/>
                     <form id="form_language_text_mobile" class="form_language_text display_inline" action="{{path("language_text", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
                         <div class="form-group">
-                            <select id="form_language_mobile_codeText" class="form_language_codeText display_inline form-control" name="form_language[codeText]">
+                            <select id="form_language_mobile_textCode" class="form_language_textCode display_inline form-control" name="form_language[textCode]">
                                 {{response.values.languageSelectOptionHtml|raw}}
                             </select>
                         </div>
@@ -124,7 +124,7 @@
                         <p class="margin_clear"><b>{% trans %}authentication_3{% endtrans %}</b></p>
                         <p class="margin_clear">{{response.values.dateLastLogin[0]}} [{{response.values.dateLastLogin[1]}}]</p>
                         <div class="horizontal_center">
-                            <a class="button_custom btn-block" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 1, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
+                            <a class="button_custom btn-block" href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': "cp_profile"})}}">{% trans %}authentication_4{% endtrans %}</a>
                             <a class="button_custom btn-block logout_button" href="{{path("authentication_exit_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}">{% trans %}authentication_5{% endtrans %}</a>
                         </div>
                     {% else %}
