--- a/symfony_fw/templates/render/module/page_view.html.twig
+++ b/symfony_fw/templates/render/module/page_view.html.twig
@@ -35,7 +35,7 @@
         {% if urlCurrentPageId > 5 %}
             {{-render(controller("App\\Controller\\PageCommentController::renderAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
 
-            {{-render(controller("App\\Controller\\PageCommentController::creationAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+            {{-render(controller("App\\Controller\\PageCommentController::saveAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
         {% endif %}
     </div>
 {% endblock %}
